# RetNetReImpl

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  hyena.py  main.py  positional_encoding.py  predict.py  pyproject.toml  recurrent_hyena.py  spiral_conv.py  text_loader.py  training.py
configs/: config.yaml
configs/model/: default.yaml
configs/predict/: default.yaml
configs/train/: default.yaml
configs/train_pipeline/: default.yaml
retnet/: .gitignore
retnet/configs/model/: default.yaml
retnet/src/: main.py  predict.py  retnet.py
sconv/: .gitignore  Dockerfile  Makefile  main.py  predict.py  requirements.txt  spiral_conv.py  text_loader.py  train.py
sconv/configs/: config.yaml
sconv/configs/model/: default.yaml
sconv/configs/predict/: default.yaml
sconv/configs/train/: default.yaml
sconv/src/: main.py  predict.py  retnet_conv.py  spiral_conv.py  text_loader.py  train.py
src/: predict.py  retnet.py  train.py  train_pipeline.py
