[tool.poetry]
name = "mnisttest"
version = "0.1.0"
description = ""
authors = ["myxy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0+cu118", source = "torch_cu118"}
torchvision = {version = "^0.16.0+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.1.0+cu118", source = "torch_cu118"}
packaging = "^23.2"
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
xlrd = "^2.0.1"
pytorch-lightning = "^2.1.0"
timm = "^0.9.8"
tensorboard = "^2.15.0"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
